--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,10 @@ spring:
       client:
         registration:
           google:
-            client-id: 712812801362-647pooav31sfa47lejk28vvgosvc585t.apps.googleusercontent.com
-            client-secret: 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
+
+
+            client-id:   ${GOOGLE_CLIENT_ID}
+            client-secret:  ${GOOGLE_CLIENT_SECRET}
             scope:
               - email
               - profile
