동적쿼리,Restful API구현,씨큐리티,JWT 인증구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,8 +18,8 @@ spring:
           google:
 
 
-            client-id:   ${GOOGLE_CLIENT_ID}
-            client-secret:  ${GOOGLE_CLIENT_SECRET}
+            client-id: 487718541796-v8dajd1uqljnm28jg98hk75o7821os1v.apps.googleusercontent.com
+            client-secret: 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
             scope:
               - email
               - profile
